@@ -61,6 +61,13 @@
  */
 
 /*
+ * Forcefully disable double-buffering for xft. On some card/driver combination
+ * this slightly decreases performance, on most it greatly helps it.
+ * The slowdown is small, so it * should normally be enabled.
+ */
+/* #define FORCE_UNBUFFERED_XFT */
+
+/*
  * The cursor blink interval, in seconds.
  */
 #define CURSOR_BLINK_INTERVAL 0.5
